routes/graphql-routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt
    haproxy.router.openshift.io/balance: random
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    haproxy.router.openshift.io/timeout: 30s
    haproxy.router.openshift.io/timeout-tunnel: 5d
  name: graphql-to-graph-server
spec:
  host: graphql.apps.662945b10b45af001eacf950.cloud.techzone.ibm.com
  path: /
  port:
    targetPort: apic-graph-server
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: apic-graph-server
    weight: 150
  wildcardPolicy: None
  
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt
    haproxy.router.openshift.io/balance: random
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    haproxy.router.openshift.io/timeout: 30s
    haproxy.router.openshift.io/timeout-tunnel: 5d
  name: graphql-to-graph-server-subscriptions
spec:
  host: graphql.zen.apps.662945b10b45af001eacf950.cloud.techzone.ibm.com
  path: /stepzen-subscriptions/
  port:
    targetPort: apic-graph-server-subscription
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: apic-graph-server-subscription
    weight: 150
  wildcardPolicy: None
