routes/stepzen-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt
    haproxy.router.openshift.io/balance: random
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    haproxy.router.openshift.io/timeout: 30s
    haproxy.router.openshift.io/timeout-tunnel: 5d
  name: stepzen-to-graph-server
spec:
  host: stepzen.zen.apps.apps.662945b10b45af001eacf950.cloud.techzone.ibm.com
  port:
    targetPort: apic-graph-server
  tls:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: apic-graph-server
    weight: 200
  wildcardPolicy: None
